deployment-busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: test
spec:
  replicas: 1  # Numero di repliche
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox-container
          image: busybox:latest  # Immagine del container
          command:
            - "/bin/sh"
            - "-c"
            - "while true; do sleep 3600; done"  # Mantiene il pod attivo
          stdin: true
          tty: true
