deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test
  labels:
    name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-service

  labels:
    app: ping-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-service
  template:
    metadata:
      labels:
        app: ping-service
    spec:
      containers:
        - name: ping-service
          image: mircocennamo/miorepo:0.1.37-SNAPSHOT
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
  labels:
    app: ping-service
    spring-boot: "true"


spec:

  selector:
    app: ping-service
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089



---


---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ping-service-my-ingress
#  namespace: test
#spec:
#  rules:
#    - host: my-ping.example.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ping-service-loadbalancer
#                port:
#                  number: 8089
