k3s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-service
  labels:
    app: ping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-service
  template:
    metadata:
      labels:
        app: ping-service
    spec:
      containers:
        - name: ping-service
          image: docker.io/library/ping-service:0.0.1-SNAPSHOT # This will be built by OpenShift or pushed to a registry
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"

            requests:
              memory: "512Mi"
              cpu: "200m"



---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
  labels:
    app: ping-service
spec:
  selector:
    app: ping-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP   # Espone il servizio solo all'interno del cluster.
  #type: LoadBalancer   # Espone il servizio verso l'esterno.


# ingress serve per esporre il servizio verso l'esterno del cluster,
  # in questo caso tramite un hostname ping-service.local.
  #L'ingress controller gestirà le richieste in arrivo e le instraderà al servizio ping-service sulla porta 8080.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-service-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: ping-service.company.it

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ping-service
                port:
                  number: 8080
